# ReadMeLocal

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHECKPOINT_1.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  revisedplan.md  supervisord.conf  yes  yes.pub
.junie/: guidelines.md
backend/: __init__.py  content_filter.py  library.py  main.py  pyproject.toml  requirements.txt  rsvp_tokens.py
backend/parsers/: __init__.py  docx_parser.py  epub_parser.py  pdf_blocks.py  pdf_parser.py
backend/tests/: test_annotations.py  test_library_api.py  test_library_scan.py  test_library_settings.py  test_pdf_blocks.py  test_pdf_parser.py  test_rsvp_tokens.py
backend/tts/: __init__.py  coqui.py  google_tts.py
config/: secret_key  secrets.env.template  settings.yaml
docs/: api-reference.md  architecture.md  configuration.md  getting-started.md  sprint-reader-plan.md
docs/plans/: 2026-01-18-containerization-design.md  2026-01-18-pdf-filtering-annotations-design.md  2026-01-18-pdf-filtering-annotations-implementation.md  2026-01-18-rsvp-engine-design.md  2026-01-18-rsvp-webapp-implementation.md  2026-01-19-google-tts-docs-design.md
frontend/: package-lock.json  package.json
frontend/electron/: main.js  preload.js
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/__tests__/: App.test.js  context.test.js  timing.test.js
frontend/src/rsvp/: timing.js
